// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode acp --help 1`] = `
"ellamaka acp

start ACP (Agent Client Protocol) server

选项：
  -h, --help                show help                                                         [布尔]
  -v, --version             show version number                                               [布尔]
      --print-logs          print logs to stderr                                              [布尔]
      --log-level           log level            [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                run without external plugins                                      [布尔]
      --disable-wopalspace  disable WopalSpace mode (use native opencode behavior)            [布尔]
      --port                port to listen on                                     [数字] [默认值: 0]
      --hostname            hostname to listen on                     [字符串] [默认值: "127.0.0.1"]
      --mdns                enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                              [布尔] [默认值: false]
      --mdns-domain         custom domain name for mDNS service (default: ellamaka.local)
                                                                 [字符串] [默认值: "ellamaka.local"]
      --cors                additional domains to allow for CORS                 [数组] [默认值: []]
      --cwd                 working directory
         [字符串] [默认值: "<HOME>"]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode mcp --help 1`] = `
"ellamaka mcp

manage MCP (Model Context Protocol) servers

命令：
  ellamaka mcp add            add an MCP server
  ellamaka mcp list           list MCP servers and their status                        [aliases: ls]
  ellamaka mcp auth [name]    authenticate with an OAuth-enabled MCP server
  ellamaka mcp logout [name]  remove OAuth credentials for an MCP server
  ellamaka mcp debug <name>   debug OAuth connection for an MCP server

选项：
  -h, --help                show help                                                         [布尔]
  -v, --version             show version number                                               [布尔]
      --print-logs          print logs to stderr                                              [布尔]
      --log-level           log level            [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                run without external plugins                                      [布尔]
      --disable-wopalspace  disable WopalSpace mode (use native opencode behavior)            [布尔]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode attach --help 1`] = `
"ellamaka attach <url>

attach to a running ellamaka server

位置：
  url  http://localhost:4096                                                         [字符串] [必需]

选项：
  -h, --help                show help                                                         [布尔]
  -v, --version             show version number                                               [布尔]
      --print-logs          print logs to stderr                                              [布尔]
      --log-level           log level            [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                run without external plugins                                      [布尔]
      --disable-wopalspace  disable WopalSpace mode (use native opencode behavior)            [布尔]
      --dir                 directory to run in                                             [字符串]
  -c, --continue            continue the last session                                         [布尔]
  -s, --session             session id to continue                                          [字符串]
      --fork                fork the session when continuing (use with --continue or --session)
                                                                                              [布尔]
  -p, --password            basic auth password (defaults to OPENCODE_SERVER_PASSWORD)      [字符串]
  -u, --username            basic auth username (defaults to OPENCODE_SERVER_USERNAME or 'opencode')
                                                                                            [字符串]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode run --help 1`] = `
"ellamaka run [message..]

run ellamaka with a message

位置：
  message  message to send                                                       [数组] [默认值: []]

选项：
  -h, --help                          show help                                               [布尔]
  -v, --version                       show version number                                     [布尔]
      --print-logs                    print logs to stderr                                    [布尔]
      --log-level                     log level  [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                          run without external plugins                            [布尔]
      --disable-wopalspace            disable WopalSpace mode (use native opencode behavior)  [布尔]
      --command                       the command to run, use message for args              [字符串]
  -c, --continue                      continue the last session                               [布尔]
  -s, --session                       session id to continue                                [字符串]
      --fork                          fork the session before continuing (requires --continue or
                                      --session)                                              [布尔]
      --share                         share the session                                       [布尔]
  -m, --model                         model to use in the format of provider/model          [字符串]
      --agent                         agent to use                                          [字符串]
      --format                        format: default (formatted) or json (raw JSON events)
                                            [字符串] [可选值: "default", "json"] [默认值: "default"]
  -f, --file                          file(s) to attach to message                            [数组]
      --title                         title for the session (uses truncated prompt if no value
                                      provided)                                             [字符串]
      --attach                        attach to a running ellamaka server (e.g.,
                                      http://localhost:4096)                                [字符串]
  -p, --password                      basic auth password (defaults to OPENCODE_SERVER_PASSWORD)
                                                                                            [字符串]
  -u, --username                      basic auth username (defaults to OPENCODE_SERVER_USERNAME or
                                      'opencode')                                           [字符串]
      --dir                           directory to run in, path on remote server if attaching
                                                                                            [字符串]
      --port                          port for the local server (defaults to random port if no value
                                      provided)                                               [数字]
      --variant                       model variant (provider-specific reasoning effort, e.g., high,
                                      max, minimal)                                         [字符串]
      --thinking                      show thinking blocks                                    [布尔]
      --replay                        replay visible session history on interactive resume
                                                                              [布尔] [默认值: false]
      --replay-limit                  cap visible interactive replay to the newest N messages [数字]
  -i, --interactive                   run in direct interactive split-footer mode
                                                                              [布尔] [默认值: false]
      --dangerously-skip-permissions  auto-approve permissions that are not explicitly denied
                                      (dangerous!)                            [布尔] [默认值: false]
      --demo                          enable direct interactive demo slash commands; pass one as the
                                      message to run it immediately           [布尔] [默认值: false]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode debug --help 1`] = `
"ellamaka debug

debugging and troubleshooting tools

命令：
  ellamaka debug config        show resolved configuration
  ellamaka debug lsp           LSP debugging utilities
  ellamaka debug rg            ripgrep debugging utilities
  ellamaka debug file          file system debugging utilities
  ellamaka debug scrap         list all known projects
  ellamaka debug skill         list all available skills
  ellamaka debug startup       print startup timing
  ellamaka debug agent <name>  show agent configuration details
  ellamaka debug v2            debug v2 catalog and built-in plugins
  ellamaka debug release-info  output structured release identity as JSON (machine interface)
  ellamaka debug info          show debug information
  ellamaka debug paths         show global paths (data, config, cache, state)
  ellamaka debug wait          wait indefinitely (for debugging)

选项：
  -h, --help                show help                                                         [布尔]
  -v, --version             show version number                                               [布尔]
      --print-logs          print logs to stderr                                              [布尔]
      --log-level           log level            [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                run without external plugins                                      [布尔]
      --disable-wopalspace  disable WopalSpace mode (use native opencode behavior)            [布尔]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode providers --help 1`] = `
"ellamaka providers

manage AI providers and credentials

命令：
  ellamaka providers list         list providers and credentials                       [aliases: ls]
  ellamaka providers login [url]  log in to a provider
  ellamaka providers logout       log out from a configured provider

选项：
  -h, --help                show help                                                         [布尔]
  -v, --version             show version number                                               [布尔]
      --print-logs          print logs to stderr                                              [布尔]
      --log-level           log level            [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                run without external plugins                                      [布尔]
      --disable-wopalspace  disable WopalSpace mode (use native opencode behavior)            [布尔]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode agent --help 1`] = `
"ellamaka agent

manage agents

命令：
  ellamaka agent create  create a new agent
  ellamaka agent list    list all available agents

选项：
  -h, --help                show help                                                         [布尔]
  -v, --version             show version number                                               [布尔]
      --print-logs          print logs to stderr                                              [布尔]
      --log-level           log level            [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                run without external plugins                                      [布尔]
      --disable-wopalspace  disable WopalSpace mode (use native opencode behavior)            [布尔]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode upgrade --help 1`] = `
"ellamaka upgrade [target]

upgrade ellamaka to the latest or a specific version

位置：
  target  version to upgrade to, for ex '0.1.48' or 'v0.1.48'                               [字符串]

选项：
  -h, --help                show help                                                         [布尔]
  -v, --version             show version number                                               [布尔]
      --print-logs          print logs to stderr                                              [布尔]
      --log-level           log level            [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                run without external plugins                                      [布尔]
      --disable-wopalspace  disable WopalSpace mode (use native opencode behavior)            [布尔]
  -m, --method              installation method to use
               [字符串] [可选值: "curl", "npm", "pnpm", "bun", "brew", "choco", "scoop", "ellamaka"]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode uninstall --help 1`] = `
"ellamaka uninstall

uninstall ellamaka and remove all related files

选项：
  -h, --help                show help                                                         [布尔]
  -v, --version             show version number                                               [布尔]
      --print-logs          print logs to stderr                                              [布尔]
      --log-level           log level            [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                run without external plugins                                      [布尔]
      --disable-wopalspace  disable WopalSpace mode (use native opencode behavior)            [布尔]
  -c, --keep-config         keep configuration files                          [布尔] [默认值: false]
  -d, --keep-data           keep session data and snapshots                   [布尔] [默认值: false]
      --dry-run             show what would be removed without removing       [布尔] [默认值: false]
  -f, --force               skip confirmation prompts                         [布尔] [默认值: false]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode serve --help 1`] = `
"ellamaka serve

starts a headless ellamaka server

选项：
  -h, --help                show help                                                         [布尔]
  -v, --version             show version number                                               [布尔]
      --print-logs          print logs to stderr                                              [布尔]
      --log-level           log level            [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                run without external plugins                                      [布尔]
      --disable-wopalspace  disable WopalSpace mode (use native opencode behavior)            [布尔]
      --port                port to listen on                                     [数字] [默认值: 0]
      --hostname            hostname to listen on                     [字符串] [默认值: "127.0.0.1"]
      --mdns                enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                              [布尔] [默认值: false]
      --mdns-domain         custom domain name for mDNS service (default: ellamaka.local)
                                                                 [字符串] [默认值: "ellamaka.local"]
      --cors                additional domains to allow for CORS                 [数组] [默认值: []]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode web --help 1`] = `
"ellamaka web

start ellamaka server and open web interface

选项：
  -h, --help                show help                                                         [布尔]
  -v, --version             show version number                                               [布尔]
      --print-logs          print logs to stderr                                              [布尔]
      --log-level           log level            [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                run without external plugins                                      [布尔]
      --disable-wopalspace  disable WopalSpace mode (use native opencode behavior)            [布尔]
      --port                port to listen on                                     [数字] [默认值: 0]
      --hostname            hostname to listen on                     [字符串] [默认值: "127.0.0.1"]
      --mdns                enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                              [布尔] [默认值: false]
      --mdns-domain         custom domain name for mDNS service (default: ellamaka.local)
                                                                 [字符串] [默认值: "ellamaka.local"]
      --cors                additional domains to allow for CORS                 [数组] [默认值: []]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode models --help 1`] = `
"ellamaka models [provider]

list all available models

位置：
  provider  provider ID to filter models by                                                 [字符串]

选项：
  -h, --help                show help                                                         [布尔]
  -v, --version             show version number                                               [布尔]
      --print-logs          print logs to stderr                                              [布尔]
      --log-level           log level            [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                run without external plugins                                      [布尔]
      --disable-wopalspace  disable WopalSpace mode (use native opencode behavior)            [布尔]
      --verbose             use more verbose model output (includes metadata like costs)      [布尔]
      --refresh             refresh the models cache from models.dev                          [布尔]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode stats --help 1`] = `
"ellamaka stats

show token usage and cost statistics

选项：
  -h, --help                show help                                                         [布尔]
  -v, --version             show version number                                               [布尔]
      --print-logs          print logs to stderr                                              [布尔]
      --log-level           log level            [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                run without external plugins                                      [布尔]
      --disable-wopalspace  disable WopalSpace mode (use native opencode behavior)            [布尔]
      --days                show stats for the last N days (default: all time)                [数字]
      --tools               number of tools to show (default: all)                            [数字]
      --models              show model statistics (default: hidden). Pass a number to show top N,
                            otherwise shows all
      --project             filter by project (default: all projects, empty string: current project)
                                                                                            [字符串]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode export --help 1`] = `
"ellamaka export [sessionID]

export session data as JSON

位置：
  sessionID  session id to export                                                           [字符串]

选项：
  -h, --help                show help                                                         [布尔]
  -v, --version             show version number                                               [布尔]
      --print-logs          print logs to stderr                                              [布尔]
      --log-level           log level            [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                run without external plugins                                      [布尔]
      --disable-wopalspace  disable WopalSpace mode (use native opencode behavior)            [布尔]
      --sanitize            redact sensitive transcript and file data                         [布尔]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode import --help 1`] = `
"ellamaka import <file>

import session data from JSON file or URL

位置：
  file  path to JSON file or share URL                                               [字符串] [必需]

选项：
  -h, --help                show help                                                         [布尔]
  -v, --version             show version number                                               [布尔]
      --print-logs          print logs to stderr                                              [布尔]
      --log-level           log level            [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                run without external plugins                                      [布尔]
      --disable-wopalspace  disable WopalSpace mode (use native opencode behavior)            [布尔]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode github --help 1`] = `
"ellamaka github

manage GitHub agent

命令：
  ellamaka github install  install the GitHub agent
  ellamaka github run      run the GitHub agent

选项：
  -h, --help                show help                                                         [布尔]
  -v, --version             show version number                                               [布尔]
      --print-logs          print logs to stderr                                              [布尔]
      --log-level           log level            [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                run without external plugins                                      [布尔]
      --disable-wopalspace  disable WopalSpace mode (use native opencode behavior)            [布尔]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode pr --help 1`] = `
"ellamaka pr <number>

fetch and checkout a GitHub PR branch, then run ellamaka

位置：
  number  PR number to checkout                                                        [数字] [必需]

选项：
  -h, --help                show help                                                         [布尔]
  -v, --version             show version number                                               [布尔]
      --print-logs          print logs to stderr                                              [布尔]
      --log-level           log level            [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                run without external plugins                                      [布尔]
      --disable-wopalspace  disable WopalSpace mode (use native opencode behavior)            [布尔]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode session --help 1`] = `
"ellamaka session

manage sessions

命令：
  ellamaka session list                list sessions
  ellamaka session delete <sessionID>  delete a session

选项：
  -h, --help                show help                                                         [布尔]
  -v, --version             show version number                                               [布尔]
      --print-logs          print logs to stderr                                              [布尔]
      --log-level           log level            [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                run without external plugins                                      [布尔]
      --disable-wopalspace  disable WopalSpace mode (use native opencode behavior)            [布尔]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode plugin --help 1`] = `
"ellamaka plugin <module>

install plugin and update config

位置：
  module  npm module name                                                            [字符串] [必需]

选项：
  -h, --help                show help                                                         [布尔]
  -v, --version             show version number                                               [布尔]
      --print-logs          print logs to stderr                                              [布尔]
      --log-level           log level            [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                run without external plugins                                      [布尔]
      --disable-wopalspace  disable WopalSpace mode (use native opencode behavior)            [布尔]
  -g, --global              install in global config                          [布尔] [默认值: false]
  -f, --force               replace existing plugin version                   [布尔] [默认值: false]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode db --help 1`] = `
"ellamaka db

database tools

命令：
  ellamaka db [query]     open an interactive sqlite3 shell or run a query                  [默认值]
  ellamaka db path        print the database path
  ellamaka db migrate     migrate JSON data to SQLite (merges with existing data)

位置：
  query  SQL query to execute                                                               [字符串]

选项：
  -h, --help                show help                                                         [布尔]
  -v, --version             show version number                                               [布尔]
      --print-logs          print logs to stderr                                              [布尔]
      --log-level           log level            [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                run without external plugins                                      [布尔]
      --disable-wopalspace  disable WopalSpace mode (use native opencode behavior)            [布尔]
      --format              Output format           [字符串] [可选值: "json", "tsv"] [默认值: "tsv"]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode mcp list --help 1`] = `
"ellamaka mcp list

list MCP servers and their status

选项：
  -h, --help                show help                                                         [布尔]
  -v, --version             show version number                                               [布尔]
      --print-logs          print logs to stderr                                              [布尔]
      --log-level           log level            [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                run without external plugins                                      [布尔]
      --disable-wopalspace  disable WopalSpace mode (use native opencode behavior)            [布尔]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode mcp add --help 1`] = `
"ellamaka mcp add

add an MCP server

选项：
  -h, --help                show help                                                         [布尔]
  -v, --version             show version number                                               [布尔]
      --print-logs          print logs to stderr                                              [布尔]
      --log-level           log level            [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                run without external plugins                                      [布尔]
      --disable-wopalspace  disable WopalSpace mode (use native opencode behavior)            [布尔]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode mcp auth --help 1`] = `
"ellamaka mcp auth [name]

authenticate with an OAuth-enabled MCP server

命令：
  ellamaka mcp auth list  list OAuth-capable MCP servers and their auth status         [aliases: ls]

位置：
  name  name of the MCP server                                                              [字符串]

选项：
  -h, --help                show help                                                         [布尔]
  -v, --version             show version number                                               [布尔]
      --print-logs          print logs to stderr                                              [布尔]
      --log-level           log level            [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                run without external plugins                                      [布尔]
      --disable-wopalspace  disable WopalSpace mode (use native opencode behavior)            [布尔]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode mcp logout --help 1`] = `
"ellamaka mcp logout [name]

remove OAuth credentials for an MCP server

位置：
  name  name of the MCP server                                                              [字符串]

选项：
  -h, --help                show help                                                         [布尔]
  -v, --version             show version number                                               [布尔]
      --print-logs          print logs to stderr                                              [布尔]
      --log-level           log level            [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                run without external plugins                                      [布尔]
      --disable-wopalspace  disable WopalSpace mode (use native opencode behavior)            [布尔]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode providers list --help 1`] = `
"ellamaka providers list

list providers and credentials

选项：
  -h, --help                show help                                                         [布尔]
  -v, --version             show version number                                               [布尔]
      --print-logs          print logs to stderr                                              [布尔]
      --log-level           log level            [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                run without external plugins                                      [布尔]
      --disable-wopalspace  disable WopalSpace mode (use native opencode behavior)            [布尔]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode providers login --help 1`] = `
"ellamaka providers login [url]

log in to a provider

位置：
  url  ellamaka auth provider                                                               [字符串]

选项：
  -h, --help                show help                                                         [布尔]
  -v, --version             show version number                                               [布尔]
      --print-logs          print logs to stderr                                              [布尔]
      --log-level           log level            [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                run without external plugins                                      [布尔]
      --disable-wopalspace  disable WopalSpace mode (use native opencode behavior)            [布尔]
  -p, --provider            provider id or name to log in to (skips provider selection)     [字符串]
  -m, --method              login method label (skips method selection)                     [字符串]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode providers logout --help 1`] = `
"ellamaka providers logout

log out from a configured provider

选项：
  -h, --help                show help                                                         [布尔]
  -v, --version             show version number                                               [布尔]
      --print-logs          print logs to stderr                                              [布尔]
      --log-level           log level            [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                run without external plugins                                      [布尔]
      --disable-wopalspace  disable WopalSpace mode (use native opencode behavior)            [布尔]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode agent create --help 1`] = `
"ellamaka agent create

create a new agent

选项：
  -h, --help                  show help                                                       [布尔]
  -v, --version               show version number                                             [布尔]
      --print-logs            print logs to stderr                                            [布尔]
      --log-level             log level          [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                  run without external plugins                                    [布尔]
      --disable-wopalspace    disable WopalSpace mode (use native opencode behavior)          [布尔]
      --path                  directory path to generate the agent file                     [字符串]
      --description           what the agent should do                                      [字符串]
      --mode                  agent mode             [字符串] [可选值: "all", "primary", "subagent"]
      --permissions, --tools  comma-separated list of permissions to allow (default: all).
                              Available: "bash, read, edit, glob, grep, webfetch, task, todowrite,
                              websearch, lsp, skill"                                        [字符串]
  -m, --model                 model to use in the format of provider/model                  [字符串]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode agent list --help 1`] = `
"ellamaka agent list

list all available agents

选项：
  -h, --help                show help                                                         [布尔]
  -v, --version             show version number                                               [布尔]
      --print-logs          print logs to stderr                                              [布尔]
      --log-level           log level            [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                run without external plugins                                      [布尔]
      --disable-wopalspace  disable WopalSpace mode (use native opencode behavior)            [布尔]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode session list --help 1`] = `
"ellamaka session list

list sessions

选项：
  -h, --help                show help                                                         [布尔]
  -v, --version             show version number                                               [布尔]
      --print-logs          print logs to stderr                                              [布尔]
      --log-level           log level            [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                run without external plugins                                      [布尔]
      --disable-wopalspace  disable WopalSpace mode (use native opencode behavior)            [布尔]
  -n, --max-count           limit to N most recent sessions                                   [数字]
      --format              output format       [字符串] [可选值: "table", "json"] [默认值: "table"]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode session delete --help 1`] = `
"ellamaka session delete <sessionID>

delete a session

位置：
  sessionID  session ID to delete                                                    [字符串] [必需]

选项：
  -h, --help                show help                                                         [布尔]
  -v, --version             show version number                                               [布尔]
      --print-logs          print logs to stderr                                              [布尔]
      --log-level           log level            [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                run without external plugins                                      [布尔]
      --disable-wopalspace  disable WopalSpace mode (use native opencode behavior)            [布尔]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode github install --help 1`] = `
"ellamaka github install

install the GitHub agent

选项：
  -h, --help                show help                                                         [布尔]
  -v, --version             show version number                                               [布尔]
      --print-logs          print logs to stderr                                              [布尔]
      --log-level           log level            [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                run without external plugins                                      [布尔]
      --disable-wopalspace  disable WopalSpace mode (use native opencode behavior)            [布尔]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode github run --help 1`] = `
"ellamaka github run

run the GitHub agent

选项：
  -h, --help                show help                                                         [布尔]
  -v, --version             show version number                                               [布尔]
      --print-logs          print logs to stderr                                              [布尔]
      --log-level           log level            [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                run without external plugins                                      [布尔]
      --disable-wopalspace  disable WopalSpace mode (use native opencode behavior)            [布尔]
      --event               GitHub mock event to run the agent for                          [字符串]
      --token               GitHub personal access token (github_pat_********)              [字符串]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode db path --help 1`] = `
"ellamaka db path

print the database path

选项：
  -h, --help                show help                                                         [布尔]
  -v, --version             show version number                                               [布尔]
      --print-logs          print logs to stderr                                              [布尔]
      --log-level           log level            [字符串] [可选值: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                run without external plugins                                      [布尔]
      --disable-wopalspace  disable WopalSpace mode (use native opencode behavior)            [布尔]"
`;
